style.css
.jumbotron {
  background-image: url(images/banner.jpg);
  background-position: center;
  background-size: cover;
  height: 100vh;
}



.navbar a {
  font-size: 50px;
}


ul .nav-link {
  font-size: 25px;
  
}

ul .nav-item {
  padding-right: 2rem;
}


.name-row {
  padding-top: 10rem;
}



.col-lg-7 h1 {
  font-size: 64px;
  font-weight: 900;

}

.about-img {
  width: 90%;

}

.services {
 background-color: #080808;
 padding-bottom: 4rem;
}


.card {
  background-color: #1b1b1b;
  margin-bottom: 1rem;
}



.fa-code {
  font-size: 64px;
  color: crimson;
}


@media (max-width:667px) {
  .name-row {
    
    padding: 0.1rem 2rem;
    
  }

  .name-con h2 h1 {
    font-size: 1rem;
  }
}



.card-img {
  width: 150px;
  height: 150px;
  object-fit: cover;
}


.owl-section {
  background-color: #080808;
  color: white;
}

.card-team  {
  background-color: #1b1b1b;
}


.card-img-1 {
  height: 180px;
  
  object-fit: cover;
}

.name-info p {
  padding: 0;
  margin: 0;
}


.fa-user {
  font-size: 25px;
  color: red;
  margin-right: 15px;
}


.fa-map-marker {
  font-size: 25px;
  color: red;
  margin-right: 20px;
}


.fa-envelope {
  font-size: 25px;
  color: red;
  margin-right: 15px;
}


.name {
  font-weight: 700;
  font-size: 20px;
}

